// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/git/storage getCommitMessages() returns commit messages 1`] = `
Array [
  "master message",
  "past message",
]
`;

exports[`platform/git/storage getFile(filePath, branchName) returns null for 404 1`] = `[Error: repository-changed]`;

exports[`platform/git/storage getFileList() should return the correct files 1`] = `
Array [
  "file_to_delete",
  "future_file",
  "master_file",
  "past_file",
]
`;

exports[`platform/git/storage getFileList() should return the correct files 2`] = `
Array [
  "file_to_delete",
  "master_file",
  "past_file",
]
`;

exports[`platform/git/storage initRepo()) should fetch latest 1`] = `
Array [
  "master message",
  "past message",
]
`;

exports[`platform/git/storage initRepo()) should fetch latest 2`] = `
Array [
  "past message2",
  "master message",
]
`;

exports[`platform/git/storage mergeBranch(branchName) should throw if branch merge throws 1`] = `
[Error: fatal: 'origin/not_found' is not a commit and a branch 'not_found' cannot be created from it
]
`;
